# mydrive

./: INTRODUCE.MD  Readme.md  main.js  package.json  preload.js
--name/: package.json
--name/src-tauri/: tauri.conf.json
.qoder/quests/: minio-client-feature.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: BucketList.tsx  ObjectList.tsx  Viewer.tsx
minio-desktop/: .gitignore  COMPLETION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json
minio-desktop/src/: App.vue  main.ts  style.css
minio-desktop/src-tauri/: Cargo.toml  tauri.conf.json
minio-desktop/src-tauri/src/: db.rs  encryption.rs  error.rs  main.rs  minio.rs  models.rs  streaming.rs  transfer.rs
minio-desktop/src-tauri/src/commands/: bucket.rs  connection.rs  encryption.rs  mod.rs  object.rs  streaming.rs  transfer.rs
minio-desktop/src/api/: index.ts
minio-desktop/src/components/: BucketList.vue  ConnectionConfig.vue  EncryptionSettings.vue  MediaViewer.vue  ObjectBrowser.vue  TransferPanel.vue
minio-desktop/src/stores/: bucket.ts  connection.ts  object.ts  settings.ts
minio-desktop/src/views/: HomeView.vue
renderer/: index.html  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  s3.rs
