[package]
name = "minio_tauri_backend"
version = "0.1.0"
authors = ["you <you@example.com>"]
edition = "2021"

[dependencies]
tauri = { version = "2.5.1", features = ["api-all"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.56.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["stream", "blocking", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
directories = "5.0"
md5 = "0.7"
sanitize-filename = "0.5"